--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+/workspace_apprentissage/googleplus
+/workspace_apprentissage/.metadata
